<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- https://stackoverflow.com/a/36542903 -->

	<item
		android:id="@+id/navigationMenuYourselfGroup"
		android:title="@string/navigation_menu_yourself_title">

		<menu>
			<item
				android:id="@+id/navigationMenuYourselfHistory"
				android:title="@string/navigation_menu_yourself_history" />
			<item
				android:id="@+id/navigationMenuYourselfBookmarks"
				android:title="@string/navigation_menu_yourself_bookmarks" />
			<item
				android:id="@+id/navigationMenuYourselfEvents"
				android:title="@string/navigation_menu_yourself_events" />
		</menu>

	</item>

	<item
		android:id="@+id/navigationMenuGroupGroup"
		android:title="@string/navigation_menu_group_title">

		<menu>
			<item
				android:id="@+id/navigationMenuGroupMembers"
				android:title="@string/navigation_menu_group_members" />
			<item
				android:id="@+id/navigationMenuGroupInvites"
				android:title="@string/navigation_menu_group_invites" />
			<item
				android:id="@+id/navigationMenuGroupManage"
				android:title="@string/navigation_menu_group_manage" />
		</menu>

	</item>

	<item
		android:id="@+id/navigationMenuMiscGroup"
		android:title="@string/navigation_menu_misc_title">

		<menu>
			<item
				android:id="@+id/navigationMenuMiscAccount"
				android:title="@string/navigation_menu_misc_account" />
		</menu>

	</item>
</menu>