<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/registrationConstraintLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".RegistrationActivity">

	<TextView
		android:id="@+id/miscManageTitleTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="91dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="90dp"
		android:text="@string/app_title"
		android:textAlignment="center"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/miscManageDescriptionTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="80dp"
		android:layout_marginEnd="80dp"
		android:text="@string/activity_registration_textview_description"
		android:textAlignment="center"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/miscManageTitleTextView" />

	<TextView
		android:id="@+id/registrationNameTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="29dp"
		android:labelFor="@id/miscManageNameEditText"
		android:text="@string/activity_registration_textview_name"
		android:textSize="16sp"
		app:layout_constraintBottom_toTopOf="@+id/miscManageNameEditText"
		app:layout_constraintStart_toStartOf="parent" />

	<EditText
		android:id="@+id/miscManageNameEditText"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="29dp"
		android:layout_marginTop="48dp"
		android:layout_marginEnd="29dp"
		android:autofillHints="name"
		android:ems="10"
		android:hint="@string/activity_registration_edittext_name"
		android:inputType="text"
		android:singleLine="true"
		android:textAlignment="textStart"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/miscManageDescriptionTextView"
		tools:ignore="DuplicateSpeakableTextCheck" />

	<TextView
		android:id="@+id/registrationPasswordTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="29dp"
		android:labelFor="@id/registrationPasswordEditText"
		android:text="@string/activity_registration_textview_password"
		android:textSize="16sp"
		app:layout_constraintBottom_toTopOf="@+id/registrationPasswordEditText"
		app:layout_constraintStart_toStartOf="parent" />

	<EditText
		android:id="@+id/registrationPasswordEditText"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="29dp"
		android:layout_marginTop="40dp"
		android:layout_marginEnd="29dp"
		android:autofillHints="name"
		android:ems="10"
		android:hint="@string/activity_registration_edittext_password"
		android:inputType="text|textPassword"
		android:singleLine="true"
		android:textAlignment="textStart"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/miscManageNameEditText"
		tools:ignore="DuplicateSpeakableTextCheck" />

	<EditText
		android:id="@+id/registrationPasswordConfirmEditText"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="29dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="29dp"
		android:autofillHints="name"
		android:ems="10"
		android:hint="@string/activity_registration_edittext_password_confirm"
		android:inputType="text|textPassword"
		android:singleLine="true"
		android:textAlignment="textStart"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/registrationPasswordEditText"
		tools:ignore="SpeakableTextPresentCheck" />

	<TextView
		android:id="@+id/registrationInviteCodeTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="29dp"
		android:labelFor="@id/registrationPasswordEditText"
		android:text="@string/activity_registration_textview_invitecode"
		android:textSize="16sp"
		app:layout_constraintBottom_toTopOf="@+id/registrationInviteCodeEditText"
		app:layout_constraintStart_toStartOf="parent" />

	<EditText
		android:id="@+id/registrationInviteCodeEditText"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="29dp"
		android:layout_marginTop="40dp"
		android:layout_marginEnd="29dp"
		android:autofillHints="name"
		android:ems="10"
		android:hint="@string/activity_registration_edittext_invitecode"
		android:inputType="text"
		android:singleLine="true"
		android:textAlignment="textStart"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/registrationPasswordConfirmEditText"
		tools:ignore="SpeakableTextPresentCheck" />

	<CheckBox
		android:id="@+id/registrationTempAccountCheckBox"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="29dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="29dp"
		android:checked="false"
		android:layoutDirection="rtl"
		android:text="@string/activity_registration_checkbox_tempaccount"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/registrationInviteCodeEditText" />

	<TextView
		android:id="@+id/registrationTempAccountTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="29dp"
		android:layout_marginEnd="29dp"
		android:text="@string/activity_registration_textview_tempaccount"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/registrationTempAccountCheckBox" />

	<Button
		android:id="@+id/registrationLoginButton"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="29dp"
		android:layout_marginEnd="29dp"
		android:layout_marginBottom="4dp"
		android:onClick="onLoginButtonClick"
		android:text="@string/activity_registration_button_login"
		android:textColor="#4E342E"
		app:layout_constraintBottom_toTopOf="@+id/registrationRegisterButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/registrationRegisterButton"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="29dp"
		android:layout_marginEnd="29dp"
		android:layout_marginBottom="24dp"
		android:onClick="onRegisterButtonClick"
		android:text="@string/activity_registration_button_register"
		android:textColor="#4E342E"
		app:layout_constraintBottom_toTopOf="@+id/registrationAuthorTextView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/registrationAuthorTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="102dp"
		android:layout_marginEnd="102dp"
		android:text="@string/app_author"
		android:textAlignment="textStart"
		android:textSize="12sp"
		app:layout_constraintBottom_toTopOf="@+id/registrationVersionTextView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/registrationVersionTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="124dp"
		android:layout_marginEnd="124dp"
		android:layout_marginBottom="10dp"
		android:text="@string/app_version"
		android:textAlignment="textStart"
		android:textSize="12sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>